<resources>
    <string name="app_name">MercaCar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="primeramano">Primera Mano</string>
    <string name="segundamano">Segunda Mano</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_noticias">Noticias</string>
    <string name="register">Log in</string>
    <string name="forgot_passwd">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_label">Nombre</string>
    <string name="info_label">Biography</string>
    <string name="save_button">Guardar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="title_pantalla_1">Menu</string>
    <string name="descripcion_pantalla_1">Un menu senzillo de utilizar con variedad de opciones</string>
    <string name="title_pantalla_2">Marcas y Modelos</string>
    <string name="descripcion_pantalla_2">Una gran variedad de las mejores marcas y sus modelos</string>
    <string name="title_pantalla_3">Conversacion</string>
    <string name="descripcion_pantalla_3">Ya puedes conversar con los vendedores que mas te llamen la atencion</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_group_list">GroupListActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="app_name1">Quick Group Chat</string>
    <string name="required_field_empty">This field cannot be empty</string>
    <string name="enter_a_message">Enter a message</string>
</resources>